# lcd-remote-app

./: .dockerignore  .gitignore  EMOJI_SUPPORT.md  LICENSE  README.md  compose.yml  main.py  phrases.py  pyproject.toml  text_renderer.py  waveshare_lcd.py
.github/: copilot-instructions.md
templates/: index.html
